--- a/src/components/AccountComponents/Account.scss
+++ b/src/components/AccountComponents/Account.scss
@@ -103,7 +103,6 @@
         margin: 0;
         padding: 0;
         width: 200px;
-        height: 100vh;
 
 
 
